Update gitlb-ci.yml
